"😜 헤더 레이아웃"

--- a/src/assets/scss/setting/_fonts.scss
+++ b/src/assets/scss/setting/_fonts.scss
@@ -11,3 +11,19 @@
 .gmarket {
   font-family: "gmarket";
 }
+
+@font-face {
+  font-display: block;
+  font-family: Mori;
+  font-style: normal;
+  font-weight: 400;
+  src: url(../../fonts/PPMori-Regular.woff2)format("woff2"),url(../../fonts/PPMori-Regular.woff)format("woff")
+}
+
+@font-face {
+  font-display: block;
+  font-family: Mori;
+  font-style: normal;
+  font-weight: 600;
+  src: url(../../fonts/PPMori-SemiBold.woff2)format("woff2"),url(../../fonts/PPMori-SemiBold.woff)format("woff")
+}
