--- a/src/assets/scss/setting/_mixin.scss
+++ b/src/assets/scss/setting/_mixin.scss
@@ -1,18 +1,18 @@
-// 가운데 정렬
+/* 가운데 정렬 */
 @mixin flex-center {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-// 양쪽 정렬
+/* 양쪽 정렬 */
 @mixin flex-between {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-// 중앙 정렬
+/* 중앙 정렬 */
 @mixin position-center {
   position: absolute;
   left: 50%;
@@ -20,7 +20,14 @@
   transform: translate(-50%, -50%);
 }
 
-// 상단 고정
+/* 수직 정렬 */
+@mixin position-horizon-center {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+/* 상단 고정 */
 @mixin position-fixed {
   position: fixed;
   left: 0;
