--- a/src/assets/scss/setting/_reset.scss
+++ b/src/assets/scss/setting/_reset.scss
@@ -1,90 +1,380 @@
-// border-box 초기화
-*,
-*:before,
-*:after {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-// 공백 초기화
-body,
-button,
-dd,
-dl,
-dt,
-fieldset,
-form,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-input,
-legend,
-li,
-ol,
-p,
-select,
-table,
-td,
-textarea,
-th,
-ul,
-figure,
-figcaption {
+/* 공백 초기화 */
+* {
   margin: 0;
   padding: 0;
 }
 
-// 폰트 초기화
-body,
-button,
-input,
-select,
-table,
-textarea {
-  font-family: var(--mainEng-font), var(--mainKor-font), "Apple SD Gothic Neo", "Malgun Gothic", "맑은 고딕", helvetica, sans-serif;
+/* border-box 초기화 */
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
 }
 
-// 링크 초기화
+/* 블록 속성 처리 */
+img,
+picture,
+svg,
+main,
+details,
+input,
+label,
+legend,
+select,
+textarea {
+  display: block;
+}
+
+/* 이미지 초기화 */
+img {
+  height: auto;
+  max-width: 100%;
+  border-style: none;
+}
+
+/* HTML 초기화 */
+html {
+  -webkit-text-size-adjust: 100%;
+  line-height: 1.15;
+}
+
+/* 폰트 설정 */
+h1 {
+  font-size: 2em;
+}
+
+pre {
+  font-family: monospace;
+  font-size: 1em;
+}
+
+b,
+strong {
+  font-weight: bolder;
+}
+
+code,
+kbd,
+samp {
+  font-family: monospace;
+  font-size: 1em;
+}
+
+small {
+  font-size: 80%;
+}
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+/* 수평 가로선 */
+hr {
+  box-sizing: content-box;
+  height: 0;
+  overflow: visible;
+}
+
+/* 링크 초기화 */
 a,
 a:hover,
 a:focus {
+  background-color: transparent;
   color: inherit;
   text-decoration: none;
 }
 
-// 스타일 초기화
+/* 버튼 초기화 */
+button {
+  color: currentColor;
+}
+
+.button {
+  align-items: center;
+  background: 0 0;
+  border: none;
+  border-radius: 6.25rem;
+  color: var(--button-color, var(--button-stroke));
+  cursor: pointer;
+  display: inline-flex;
+  font-size: max(1rem, min(0.38835vw + 0.908981rem, 1.375rem));
+  font-weight: 600;
+  gap: 0.363636em;
+  justify-content: center;
+  letter-spacing: -0.01em;
+  line-height: 1.04545;
+  overflow: hidden;
+  padding: 0.9375rem 1.5rem;
+  position: relative;
+  text-decoration: none;
+
+  @media only screen and (max-width: 39.9375rem) {
+    width: 100%;
+  }
+}
+
+/* 스타일 초기화 */
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 120rem;
+  padding-left: max(1.5rem, min(6.73139vw - 0.0776699rem, 8rem));
+  padding-right: max(1.5rem, min(6.73139vw - 0.0776699rem, 8rem));
+}
+
+.container--wide {
+  padding-left: max(1.5rem, min(1.5534vw + 1.13592rem, 3rem));
+  padding-right: max(1.5rem, min(1.5534vw + 1.13592rem, 3rem));
+}
+
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(50%);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.form,
+form {
+  position: relative;
+}
+
+abbr[title] {
+  border-bottom: none;
+  -webkit-text-decoration: underline dotted;
+  text-decoration: underline dotted;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+img {
+  border-style: none;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+}
+
+button,
+input {
+  overflow: visible;
+}
+
+button,
+select {
+  text-transform: none;
+}
+
+[type="button"],
+[type="reset"],
+[type="submit"],
+button {
+  -webkit-appearance: button;
+}
+
+[type="button"]::-moz-focus-inner,
+button::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+[type="button"]:-moz-focusring,
+button:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+fieldset {
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+
+legend {
+  box-sizing: border-box;
+  color: inherit;
+  display: table;
+  max-width: 100%;
+  padding: 0;
+  white-space: normal;
+}
+
+progress {
+  vertical-align: baseline;
+}
+
+textarea {
+  overflow: auto;
+}
+
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box;
+  padding: 0;
+}
+
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+[type="search"] {
+  -webkit-appearance: textfield;
+  outline-offset: -2px;
+}
+
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  font: inherit;
+}
+
+summary {
+  display: list-item;
+}
+
+[hidden],
+template {
+  display: none;
+}
+
+input,
+select,
+textarea {
+  width: 100%;
+}
+
+input[type="checkbox"],
+input[type="radio"],
+input[type="submit"] {
+  width: auto;
+}
+
+label {
+  margin-bottom: 0.375rem;
+}
+
+label .req {
+  color: var(--color-shockingly-green);
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+input[type="email"],
+input[type="number"],
+input[type="password"],
+input[type="tel"],
+input[type="text"],
+input[type="url"],
+select {
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid var(--color-surface50);
+  padding: 1rem 0;
+}
+
+input[type="email"]:-webkit-autofill,
+input[type="text"]:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 50px var(--color-surface-white) inset;
+}
+
+input[type="number"]:-webkit-autofill,
+input[type="password"]:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 50px var(--color-surface-white) inset;
+}
+
+input[type="tel"]:-webkit-autofill,
+input[type="url"]:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 50px var(--color-surface-white) inset;
+}
+
+select:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 50px var(--color-surface-white) inset;
+}
+
+::-moz-placeholder {
+  color: var(--color-just-black);
+}
+
+::placeholder {
+  color: var(--color-just-black);
+}
+
+.field {
+  margin-top: max(1.5rem, min(1.0356vw + 1.25728rem, 2.5rem));
+}
+
+button {
+  background-color: transparent;
+  border: none;
+}
+
+/* body 초기화 */
+body {
+  color: var(--color-surface-white);
+  font-family: Mori, sans-serif;
+  font-weight: 400;
+}
+body {
+  background-color: var(--color-just-black);
+}
+
+a {
+  color: currentColor;
+}
+main {
+  position: relative;
+  z-index: 1;
+}
+
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  font-weight: normal;
+  font-weight: 400;
 }
 
-ul {
-  list-style: none;
-}
-
-em,
-address {
-  font-style: normal;
-}
-
-strong {
-  font-weight: normal;
-}
-
-img {
-  vertical-align: top;
-  width: 100%;
-}
-
-// 스킵메뉴
+/* 스킵메뉴 */
 #skip a {
   position: absolute;
   left: 10px;
