--- a/src/assets/scss/common/_common.scss
+++ b/src/assets/scss/common/_common.scss
@@ -43,3 +43,24 @@
     // font-size: max(0.875rem, min(0.12945vw + 0.84466rem, 1rem));
   }
 }
+
+.grid {
+  column-gap: 1rem;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+}
+
+.col-12 {
+  grid-column-end: span 12;
+}
+
+.body-copy,
+.body-r {
+  font-weight: 400;
+  letter-spacing: -0.01em;
+  line-height: 1.3;
+}
+
+.body-r {
+  font-size: max(1.25rem, min(0.2589vw + 1.18932rem, 1.5rem));
+}
