--- a/src/assets/scss/setting/_reset.scss
+++ b/src/assets/scss/setting/_reset.scss
@@ -95,10 +95,10 @@ button {
 
 .button {
   align-items: center;
-  background: 0 0;
-  border: none;
+  // background: 0 0;
+  // border: none;
   border-radius: 6.25rem;
-  color: var(--button-color, var(--button-stroke));
+  // color: var(--button-color, var(--button-stroke));
   cursor: pointer;
   display: inline-flex;
   font-size: max(1rem, min(0.38835vw + 0.908981rem, 1.375rem));
@@ -114,6 +114,35 @@ button {
 
   @media only screen and (max-width: 39.9375rem) {
     width: 100%;
+  }
+
+  &:before {
+    content: "";
+    display: block;
+    width: 20vw;
+    height: 20vw;
+    position: absolute;
+    top: -80%;
+    right: 100%;
+    background-color: var(--color-surface-white);
+    border-radius: 20vw;
+    transition: all 0.4s;
+    z-index: -1;
+  }
+
+  &:hover {
+    &::before {
+      top: -200%;
+      transform: translateX(70%);
+    }
+
+    .button__label {
+      color: var(--color-just-black);
+    }
+  }
+
+  .button__label {
+    transition: all 0.4s;
   }
 }
 
