--- a/src/assets/scss/section/_intro.scss
+++ b/src/assets/scss/section/_intro.scss
@@ -40,6 +40,7 @@
 
             span {
               display: block;
+              position: relative;
 
               &.clip {
                 overflow: hidden;
@@ -51,7 +52,7 @@
             }
           }
 
-          .home-hero__frontend {
+          .home-hero__seoeun {
             .e {
               position: relative;
 
@@ -60,6 +61,32 @@
                 top: -100px;
                 left: 15px;
                 width: 122px;
+              }
+            }
+          }
+
+          .home-hero__portfolio {
+            .i {
+              display: block;
+              perspective: 750px;
+              position: relative;
+            }
+
+            .f {
+              .home-hero-squiggle {
+                font-size: 0;
+                position: absolute;
+                z-index: -1;
+                bottom: max(-4.375rem, min(-2.589vw - 1.2682rem, -1.875rem));
+                height: max(3.125rem, min(8.34952vw + 1.16808rem, 11.1875rem));
+                left: 0;
+                transform: rotate(25deg);
+                width: max(1.875rem, min(4.85437vw + 0.737257rem, 6.5625rem));
+
+                img {
+                  height: 100%;
+                  width: 100%;
+                }
               }
             }
           }
@@ -82,6 +109,7 @@
 
         .button {
           &:hover {
+            transition: 0.5s all;
             color: var(--color-just-black) !important;
             path {
               fill: var(--color-just-black) !important;
@@ -129,9 +157,9 @@
               width: 10px;
             }
 
-            path {
-              fill: var(--color-surface-white);
-            }
+            // path {
+            //   fill: var(--color-surface-white);
+            // }
           }
 
           @media only screen and (min-width: 77.5rem) {
