--- a/src/assets/scss/section/_intro.scss
+++ b/src/assets/scss/section/_intro.scss
@@ -56,7 +56,7 @@
                 position: absolute;
                 top: -100px;
                 left: 15px;
-                width: 122px;
+                width: 7.6vw;
               }
             }
           }
