--- a/src/assets/scss/setting/_fonts.scss
+++ b/src/assets/scss/setting/_fonts.scss
@@ -1,23 +1,16 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
-@import url("https://websfont.github.io/nanumSquareNeo/nanumSquareNeo.css");
-@import url("https://websfont.github.io/gmarket/gmarket.css");
-
-.mont {
-  font-family: "Montserrat";
-}
-.nanum {
-  font-family: "nanumSquareNeo";
-}
-.gmarket {
-  font-family: "gmarket";
-}
+// @font-face {
+//   font-family: "Apple SD Gothic Neo";
+//   font-style: bold;
+//   font-weight: 600;
+//   src: url("/fonts/Apple/AppleSDGothicNeoB.woff2") format("font-woff2"), url("/fonts/Apple/AppleSDGothicNeoB.woff") format("woff");
+// }
 
 @font-face {
   font-display: block;
   font-family: Mori;
   font-style: normal;
   font-weight: 400;
-  src: url(../../fonts/PPMori-Regular.woff2)format("woff2"),url(../../fonts/PPMori-Regular.woff)format("woff")
+  src: url(../../fonts/PPMori-Regular.woff2) format("font-woff2"), url(../../fonts/PPMori-Regular.woff) format("woff");
 }
 
 @font-face {
@@ -25,5 +18,5 @@
   font-family: Mori;
   font-style: normal;
   font-weight: 600;
-  src: url(../../fonts/PPMori-SemiBold.woff2)format("woff2"),url(../../fonts/PPMori-SemiBold.woff)format("woff")
+  src: url(../../fonts/PPMori-SemiBold.woff2) format("font-woff2"), url(../../fonts/PPMori-SemiBold.woff) format("woff");
 }
