--- a/src/assets/scss/setting/_vars.scss
+++ b/src/assets/scss/setting/_vars.scss
@@ -55,6 +55,9 @@
     #5be1ff 60.94%,
     #00bae2 94.79%
   );
+  --color-light-grey-gradient: radial-gradient(circle at 0% 0.5%, rgb(241, 241, 242) 0.1%, rgb(224, 226, 228) 100.2%);
+  --color-navy-gradient: linear-gradient(180.3deg, rgb(221, 221, 221) 5.5%, rgb(110, 136, 161) 90.2%);
+  --color-light-brown-gradient: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
   --color-scroll-pink: #ffd7fd;
   --color-scroll-pink-lt: #ffe9fe;
   --color-scroll-gradient: linear-gradient(317.42deg, #ffe9fe 10.4%, #ff96f9 83.03%);
@@ -65,6 +68,7 @@
   --ease-in-quart: cubic-bezier(0.5, 0, 0.75, 0);
   --ease-out-quart: cubic-bezier(0.175, 0.79, 0.38, 0.905);
   --ease-in-out-quart: cubic-bezier(0.645, 0.045, 0.355, 1);
+  font-family: var(--mainEng-font), var(--mainKor-font);
 }
 
 body {
