--- a/src/assets/scss/section/_skills.scss
+++ b/src/assets/scss/section/_skills.scss
@@ -9,37 +9,60 @@
 // }
 
 .home-skills__inner {
-  padding-bottom: max(4.5rem, min(11.8447vw + 1.72391rem, 15.9375rem));
-  padding-top: max(4rem, min(6.40777vw + 2.49818rem, 10.1875rem));
+  // padding-bottom: max(4.5rem, min(11.8447vw + 1.72391rem, 15.9375rem));
+  // padding-top: max(4rem, min(6.40777vw + 2.49818rem, 10.1875rem));
   position: relative;
+
   // overflow: hidden;
 
+  .skills__fixed {
+    @include position-center;
+    text-align: center;
+    width: 100%;
+    font-weight: 600;
+    font-size: max(2.625rem, min(5.56634vw + 1.32039rem, 8rem));
+  }
+
   .skills__wrap {
-    // margin-bottom: max(2rem, min(2.0712vw + 1.51456rem, 4rem));
+    margin-bottom: max(2rem, min(2.0712vw + 1.51456rem, 4rem));
     position: relative;
+    // left: 100vw;
+    width: 500%;
+    height: 100vh;
 
     .skills__panels {
-      align-items: stretch;
+      // align-items: stretch;
+      @include position-horizon-center;
       display: flex;
-      flex-direction: column;
+      // justify-content: flex-end;
+      // flex-direction: column;
+      // padding-left: 100vw;
+      // padding-right: 100vw;
       gap: 2rem;
       // justify-content: space-between;
       list-style-type: none;
-      width: 3140px;
+      
+      // width: auto;
+      // width: 3140px;
+      // width: 3840px;
 
       @media only screen and (min-width: 48rem) {
         flex-direction: row;
       }
       .skills__panel {
+        justify-content: flex-end;
         background: var(--color-just-black);
         border: 0.125rem solid var(--color-surface50);
         border-radius: 1rem;
         padding: max(1rem, min(1.0356vw + 0.757282rem, 2rem));
         position: relative;
+        // left: 100vw;
         text-align: left;
         width: 362.46px;
+        // height: 402px;
         // height: 654.17px;
-        // width: 100%;
+        // width: 150%;
+        // box-sizing: border-box;
 
         &:nth-child(1) {
           --panel-theme: var(--color-ui-text-gradient);
