🥳 헤더 모바일메뉴 완료

--- a/src/assets/scss/section/_header.scss
+++ b/src/assets/scss/section/_header.scss
@@ -374,7 +374,7 @@
           color: var(--color-just-black);
           flex: 1;
           overflow: hidden;
-          height: 794.21px;
+          // height: 794.21px;
           right: 100vw;
           transition: all 0.2s 0.3s;
 
